@@ -3,18 +3,11 @@
 plugins {
     java
     `java-library`
-//    kotlin("jvm") version "1.3.61" apply false
-
-    id("com.github.johnrengelman.shadow") version "5.2.0"
-    id("org.javamodularity.moduleplugin") version "1.6.0" apply false
-//    id("kotlinx-serialization") version "1.3.61" apply false
-//    id("me.champeau.gradle.jmh") version "0.5.0"
-//    id("org.beryx.jlink") version "2.17.2"
+    //    id("com.github.johnrengelman.shadow") version "5.2.0"
 }
 
 repositories {
     jcenter()
-//    maven("https://kotlin.bintray.com/kotlinx")
 }
 
 configure<JavaPluginConvention> {
@@ -22,6 +15,9 @@ configure<JavaPluginConvention> {
     targetCompatibility = JavaVersion.VERSION_14
 }
 
+java {
+    modularity.inferModulePath.set(true)
+}
 
 allprojects {
     group = "cos"
@@ -35,50 +31,14 @@ allprojects {
 }
 
 subprojects {
-//    apply(plugin = "kotlin")
-//    apply(plugin = "kotlinx-serialization")
-    apply(plugin = "com.github.johnrengelman.shadow")
-    apply(plugin = "org.javamodularity.moduleplugin")
-//    apply(plugin = "me.champeau.gradle.jmh")
-
-
-    tasks.compileJava {
-        options.compilerArgs = listOf("--enable-preview")
-//        extensions.configure<org.javamodularity.moduleplugin.extensions.CompileModuleOptions> {
-//            addModules = listOf()
-//            compileModuleInfoSeparately = false
-//        }
-    }
-
-//    tasks.withType<KotlinCompile> {
-//        kotlinOptions.apply {
-//            jvmTarget = "12"
-//            noReflect = true
-//            noStdlib = true
-//            noJdk = false
-//            noReflect = true
-//            includeRuntime = false
-//            languageVersion = "1.3"
-//            apiVersion = "1.3"
-//            suppressWarnings = true
-//        }
-//    }
-
-    dependencies {
-//        implementation(kotlin("stdlib-jdk8"))
-        implementation("org.jetbrains:annotations:18.0.0")
-    }
 
     repositories {
         mavenCentral()
         jcenter()
+        maven(url = "https://dl.bintray.com/almazko/micro")
     }
-
 
     tasks.withType<JavaCompile> {
         options.compilerArgs = listOf("--enable-preview")
     }
-
-
-
 }
